<resources>
    <string name="app_name">Animanga_Universe</string>
    <string name="AnimangaUniverse">Animanga Universe</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repite contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="contraseñaOlvidada">Se me ha olvidado la contraseña</string>
    <string name="campoUsuarioVacio">El campo user está vacío</string>
    <string name="campoContraseñaVacio">El campo contraseña está vacío</string>
    <string name="campoCorreoVacio">El campo correo está vacío</string>
    <string name="campoFechaNacimientoVacio">El campo fecha de nacimiento está vacío</string>
    <string name="camporSexoVacio">El campo sexo está vacío</string>
    <string name="campoContraseña2Vacio">El campo repetir contraseña está vacío</string>
    <string name="camposContraseñaNoCoinciden">Los campos contraseña y repetir contraseña no coinciden</string>
    <string name="contraseñaIncorrecta">La contraseña introducida no es correcta</string>
    <string name="usuarioNoExiste">El user introducido no existe</string>
    <string name="correo">Correo</string>
    <string name="sexo">Sexo</string>
    <array name="sexos">
        <item>Hombre</item>
        <item>Mujer</item>
    </array>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="fechaDeNacimiento">Fecha de nacimiento</string>
    <string name="guardar">Guardar</string>
    <string name="protagonistas">Imagen con protagonistas</string>
    <string name="errorRellenoFecha">Error al rellenar la fecha</string>
    <string name="cambioContraseña">Cambio de contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="codigoVerificacion">Código de verificación</string>
    <string name="errorRellenoDatos">Error al rellenar los datos</string>
    <string name="bbddvacia">La base de datos está vacía</string>
    <string name="codigoNoCoincide">El código de verificación es incorrecto</string>
    <string name="contraseñaCambiada">La contraseña ha sido cambiada con éxito</string>
    <string name="aceptar">Aceptar</string>
    <string name="usuarioExiste">El user ya existe</string>
    <string name="forums">Forums</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="listas">Listas</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="imagen">Imagen del elemento</string>
    <string name="titulo">Titulo</string>
    <string name="info">Info</string>
    <string name="rating">Rating</string>
    <string name="estado">Estado</string>
    <string name="progreso">Progreso</string>
    <string name="viendo">Viendo</string>
    <string name="completado">Completado</string>
    <string name="dejado">Dejado</string>
    <string name="enespera">En espera</string>
    <string name="planeado">Planeado</string>
    <string name="sinasignar">Sin asignar</string>
    <string name="leyendo">Leyendo</string>
    <string name="todos">Todos</string>
    <string name="fechaRegistro">Fecha de Registro</string>
    <string name="editarPerfil">Editar perfil</string>
    <string name="cambiarContraseña">Cambiar la contraseña</string>
    <string name="fotoPerfil">La foto de perfil</string>
    <string name="vistos">vistos</string>
    <string name="totales">totales</string>
    <string name="divisor">/</string>
    <string name="ranking">Ranking</string>
    <string name="cargandoEleementos">Cargando elementos</string>
    <string name="cambiosGuardados">Los cambios han sido guardados con éxito</string>
    <string name="guardarpassword">Quieres guardar el user para una autenticación  más rápida?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="contraseñaguardada">Hay una contraseña guardada para tu user, ¿Quieres utilizar el autorelleno?</string>
    <string name="cero">0</string>
    <string name="contraseñaAntigua">Contraseña antigua</string>
    <string name="contraseñaNueva">Contraseña nueva</string>
    <string name="contraseñaAvacio">EL campo contrasñea antigua está vacío</string>
    <string name="contraseñaNvacio">El campo contraseña nueva está vacío</string>
    <string name="ok">OK</string>
    <string name="desconocido">/?</string>
    <string name="discusion">Discusion</string>
    <string name="fecha">Fecha</string>
    <string name="mensaje">Mensaje</string>
    <string name="publicar">Publicar</string>
    <string name="obra">Obra</string>
    <string name="boton_atras_desc">El botón atrás</string>
    <string name="en">EN</string>
    <string name="es">ES</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas finibus ex leo, imperdiet dignissim felis faucibus et. Ut rutrum est lorem, sit amet consectetur orci laoreet ac. Nunc rhoncus est. Vivamus arcu erat, consequat sit amet erat ut, euismod auctor libero. Praesent a efficitur tellus. Praesent quis feugiat tellus. Duis in maximus arcu. Aliquam pretium risus ac nibh iaculis convallis. Cras pellentesque, ipsum eget congue rutrum, mauris purus cursus dui, vitae elementum ipsum sapien at metus. Etiam convallis dui ante, at pretium diam iaculis vel. Mauris nec euismod odio, quis pellentesque massa. Maecenas semper non enim ac molestie. Ut hendrerit, nulla sit amet aliquet tristique, purus dolor tincidunt mi, vel venenatis leo orci auctor ex. Sed facilisis elit id mi sollicitudin facilisis. Fusce eget finibus tellus. Proin tincidunt metus vitae est auctor pretium.\n\nPellentesque finibus dignissim risus, commodo pulvinar nisi vulputate sed. Mauris iaculis arcu et massa mattis pellentesque. Aliquam cursus nunc sit amet eros porta accumsan. Morbi consectetur at justo ac semper. Praesent at dolor a nisl imperdiet elementum. Suspendisse non ultrices odio. Nam ut ipsum sapien. Quisque vitae facilisis dui. Donec neque augue, sodales non nisl nec, bibendum finibus nunc.\n\nProin nisl lectus, eleifend sed condimentum a, commodo ut augue. Vestibulum feugiat, mi et rutrum ultricies, diam lorem hendrerit lectus, eget aliquam tellus metus a diam. Morbi iaculis ipsum nisi, a cursus massa dictum sit amet. Fusce commodo scelerisque congue. Ut molestie fermentum rutrum. Etiam id justo nec purus consequat ultrices. Nullam nisl lorem, imperdiet sit amet ultricies malesuada, pharetra sit amet odio. Nunc dapibus vitae dui sollicitudin posuere. Nullam egestas dignissim nibh, sit amet congue elit dapibus vel. Mauris et lectus volutpat, cursus ligula in, sodales tellus. Integer sit amet tempus nulla. Proin a nulla tellus. Donec eu ante massa. Proin eu sapien velit. Nunc nec mollis odio. Integer at varius risus, sit amet sodales nisl.\n\nEtiam efficitur leo eu lorem venenatis hendrerit. In aliquam, est nec luctus accumsan, nunc enim fringilla sapien, eleifend feugiat est tellus ut mauris. Duis porttitor rhoncus risus eu bibendum. Nam bibendum sapien sed diam aliquam suscipit. Mauris egestas dictum leo, faucibus ullamcorper tortor mattis ac. Integer urna orci, commodo ut justo in, efficitur imperdiet orci. Aliquam id molestie tellus.\n\nNunc in ipsum in mi fermentum pharetra. Fusce porttitor lobortis massa consectetur euismod. Nullam tempus odio in imperdiet congue. Curabitur tellus tortor, vulputate vitae viverra sit amet, lobortis sed libero. Nullam euismod turpis vel ligula pretium aliquet. Sed convallis malesuada leo, faucibus ultricies purus tristique sed. Nulla sed fringilla dui. Curabitur tempus lorem quis quam laoreet faucibus. Integer turpis sem, dictum ac euismod nec, efficitur eu nulla. Curabitur magna velit, scelerisque ut ipsum quis, convallis vestibulum lacus. Etiam mauris urna, scelerisque eu cursus quis, gravida varius ex.</string>
    <string name="_0">0</string>
    <string name="date">date</string>
    <string name="imagen_anime">Imagen anime</string>
    <string name="status">Estado:</string>
    <string name="episodios">Episodios:</string>
    <string name="duracion">Duración</string>
    <string name="generos">Generos</string>
    <string name="temporada">Temporada:</string>
    <string name="anyoo">Año:</string>
    <string name="valorado_por">Valorado por:</string>
    <string name="fuente">Fuente:</string>
    <string name="compania">Compañía:</string>
    <string name="titulo_en_japones">Título en japonés:</string>
    <string name="editar">Editar:</string>
    <string name="tu_lista_esta_vacia">Tu lista está vacía</string>
    <string name="tienes_la_lista_vacia">Tienes la lista vacía!</string>
    <string name="capitulos">Capítulos:</string>
    <string name="volumenes">Volumenes</string>
    <string name="tipo">Tipo:</string>
    <string name="titulo_en_ingles">Título en inglés:</string>
    <string name="autores">Autores:</string>
    <string name="realiza_una_busqueda">Realiza una búsqueda</string>
    <string name="floating_button">Floating button</string>
    <string name="image_button">Image button</string>
    <string name="media">Nota Media: </string>
    <string name="tiempo">Tiempo empleado</string>
    <string name="anyos">Años</string>
    <string name="meses">Meses</string>
    <string name="semanas">Semanas</string>
    <string name="dias">Días</string>
    <string name="horas">Horas</string>
    <string name="minutos">Minutos</string>
    <string name="salir">Salir</string>
    <string name="errorServidor">Error al conectarse al servidor</string>
</resources>