<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ranking"
        android:title="@string/ranking"
        android:icon="@drawable/ranking"/>
    <item
        android:id="@+id/forums"
        android:title="@string/forums"
        android:icon="@drawable/baseline_forum_24"/>
    <item
        android:id="@+id/buscar"
        android:title="@string/buscar"
        android:icon="@drawable/baseline_search_24"
        />
    <item
        android:id="@+id/listas"
        android:title="@string/listas"
        android:icon="@drawable/baseline_format_list_bulleted_24"/>
    <item
        android:id="@+id/perfil"
        android:title="@string/perfil"
        android:icon="@drawable/baseline_perfil"/>
</menu>