<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/imagen"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/imagen"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:id="@+id/titulo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:id="@+id/infoAdicional"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:scaleY="5"
            android:progress="5"
            android:max="10"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vistos"
                android:id="@+id/vistos"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/divisor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/totales"
                android:id="@+id/totales"/>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp"
        android:layout_gravity="bottom">
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_edit_list_24"
            android:layout_gravity="bottom"
            android:id="@+id/botonEditar"
            />
    </LinearLayout>
</LinearLayout>