<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:id="@+id/imagen"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/imagen"
            android:layout_marginHorizontal="10dp"
            />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:id="@+id/titulo"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/info"
            android:id="@+id/infoAdicional"/>
        <TextView
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:drawableStartCompat="@drawable/baseline_star_24"
            android:id="@+id/rating"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_playlist_add_24"
        android:layout_gravity="bottom"
        android:id="@+id/boton"
        />


</LinearLayout>