<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditarItem">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/AnimangaUniverse"
        android:background="@color/darknavy"
        app:titleTextColor="@color/white"
        app:titleCentered="true"
        style="@style/Widget.Material3.Toolbar">
    </com.google.android.material.appbar.MaterialToolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/estadoText"
        />
    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/estadoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:chipSpacing="35dp"
        app:chipSpacingHorizontal="25dp"
        app:singleSelection="true"
        android:layout_marginTop="20dp"
        android:id="@+id/chipGroup"
        >
        <com.google.android.material.chip.Chip
            android:id="@+id/completado"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completado"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/enEspera"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enespera"/>
        <com.google.android.material.chip.Chip
            android:checked="true"
            android:id="@+id/sinAsignar"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sinasignar"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dejado"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dejado"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/enProceso"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viendo"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/planeado"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planeado"/>


    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/progresoText"
        />
    <LinearLayout
        android:id="@+id/linearProgreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/progresoText">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/progreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cero"
                android:textAlignment="center"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/episodiosTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/?"
            app:layout_constraintTop_toBottomOf="@+id/progresoText"
            app:layout_constraintStart_toEndOf="@+id/progreso"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="35sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearProgresoBarra"
        app:layout_constraintTop_toBottomOf="@+id/linearProgreso"
        android:layout_marginTop="20dp">
        <ProgressBar
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:progressTint="@color/tangerine"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:scaleY="5"
            android:progress="5"
            android:max="10"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/linearProgreso"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"
            android:layout_gravity="bottom"
            android:id="@+id/botonPlus"
            app:layout_constraintStart_toEndOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        app:layout_constraintTop_toBottomOf="@+id/linearProgresoBarra"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/ratingText"
        />
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@id/ratingText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:progressTint="@color/tangerine"
        />
    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darknavy"
        />

</androidx.constraintlayout.widget.ConstraintLayout>