<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:id="@+id/imagen"
        android:scaleType="fitCenter"
        android:layout_marginHorizontal="10dp"
        android:importantForAccessibility="no" />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:id="@+id/titulo"
            android:layout_marginVertical="3dp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discusion"
            android:textStyle="italic"
            android:layout_below="@+id/titulo"
            android:layout_marginVertical="3dp"
            android:id="@+id/topic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comments"
            app:drawableStartCompat="@drawable/baseline_chat_bubble_24"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/_0"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/date"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>


</LinearLayout>