<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contraseñaAntigua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/contraseñaAntigua">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contraseñaNueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contraseñaAntigua"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/contraseñaNueva">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contraseñaNueva2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contraseñaNueva"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            android:hint="@string/password2">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/botonGuardar"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contraseñaNueva2"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/darknavy"
        android:text="@string/guardar" />


</RelativeLayout>